# x_printer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
tests/: test_capsule.py  test_txt_input.py  test_variables.py
tests/inputs/: input.txt  vdef.csv
tests/outputs/: output_0.txt  output_1.txt  output_2.txt  output_txt_test.txt
x_printer/: io_templates.py  spaces.py
x_printer/utils/: utils.py
