[tool.pdm]

[project]
name = "x_printer"
version = "0.1.0"
description = "Simplified input file creation - populate parameterized input files from sampled parameter space."
authors = [
    {name = "Stephen Wormald", email = "7775585+swormald@users.noreply.github.com"},
]

# TODO: Enter the dependencies for your code
dependencies = [
    # "random",
    # "pandas",
    # "numpy"
    # "abc"
]


# TODO: Rename this path and the appropriate folder to your project's name
[tool.hatch.build.targets.wheel]
packages = ["x_printer"]

requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

# These are required for testing
[project.optional-dependencies]
test = [
    "pytest>=7.3.1",
    "pytest-mock",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
